Working on DialogBox The animation is added The text passed like a props have a bug jump the second value and add on the final Undefined

--- a/app/dungeon/dialog/dialog.module.css
+++ b/app/dungeon/dialog/dialog.module.css
@@ -9,6 +9,7 @@
     overflow-y: scroll;
     padding: 2dvh 3dvw 4dvh;
     background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     z-index: 8;
 }
 
@@ -19,5 +20,5 @@
 }
 
 .Text {
-
+    white-space: pre-wrap;
 }
